--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,3 +58,15 @@ features = ["xlib"]
 
 [target.arm-linux-androideabi.dependencies.egl]
 git = "https://github.com/servo/rust-egl"
+
+[target.i686-unknown-linux-gnu.dependencies.egl]
+git = "https://github.com/servo/rust-egl"
+
+[target.x86_64-unknown-linux-gnu.dependencies.egl]
+git = "https://github.com/servo/rust-egl"
+
+[target.arm-unknown-linux-gnueabihf.dependencies.egl]
+git = "https://github.com/servo/rust-egl"
+
+[target.aarch64-unknown-linux-gnu.dependencies.egl]
+git = "https://github.com/servo/rust-egl"
